syntax = "proto3";



package coupon;


service CouponStreamService {

  rpc StreamCouponIssues(LanguageFilter) returns (stream CouponIssue);

  rpc StreamActiveCoupons(UserFilter) returns (stream ActiveCouponStreamResponse);

  rpc StreamActiveBusinessesStream(EmptyRequest) returns (stream ActiveBusinessesStreamResponse);

  rpc StreamMoreCouponRequests(UserFilter) returns (stream MoreCouponRequest);


  rpc ActiveCouponIssuesWithBusinessesStream(LanguageFilter) returns (stream CouponIssueWithBusiness);


  rpc WalletStream(UserFilter) returns (stream Balance);
}

//NOTE: List of statuses to filter, e.g., 'active', 'suspended', 'ended'


message StatusFilter {
  repeated string statuses = 1; 
}




message CouponIssue {
  string _id = 1;
  string drawId = 2;
  string businessContractId = 3;
  bool deliveryAvailable = 4;
  string deliveryContactPhone = 5;
  string title = 6; // ✅ Language-specific value only (not an object)
  string image = 7; // ✅ Language-specific image URL (not an object)
  string descriptionFile = 8; // ✅ Language-specific file URL (not an object)
  string activeAt = 9;
  string endAt = 10;
  string expireAt = 11;
  repeated string zoneIds = 12;
  int32 initialAmount = 13;
  string currency = 14;
  int32 purchasePriceAmount = 15;
  int32 discountAmount = 16;
  int32 sellPriceAmount = 17;
  int32 ticketPriceAmount = 18;
  int32 grandDrawMultiplier = 19;
  string couponsSource = 20;
  string couponsCsvPath = 21;
  string additionalCouponsCsvPath = 22;
  int32 arrangement = 23;
  string couponsPrefix = 24;
  string businessId = 25;
  string createdAt = 26;
  string type = 27;
  int32 amountExpired = 28;
  int32 additionalAmount = 29;
  int32 lastIncrId = 30;
  int32 nextCodeIncrId = 31;
  string _rawPath = 32;
  string restrictions = 33; // ✅ Language-specific restrictions (not an object)
  string id = 34;
  repeated string methodsOfRedemption = 35;
  int32 amountUsed = 36;
  int32 amountSold = 37;
  int32 streamtype = 38;
  string status = 39;
}


message UserFilter {
  string userId = 1;
  optional string languageCode = 2;
}

message LanguageFilter {
 optional string languageCode = 1;
}


message MoreCouponRequest {
  string id = 1;           
  string userId = 2;       
  string couponIssueId = 3; 
  int64 createdAt = 4;      
  string parentId = 5;   
}



message EmptyRequest {

}


message ActiveBusinessesStreamResponse {
  string   id = 1;
  string   title = 2;
  string   description = 3;
  string   image = 4;
  repeated string categories = 5;
  string   businessId = 6;
  string   contractType = 7;
}


message ActiveCouponStreamResponse {
  string _id = 1;
  RedemptionInfo redemptionInfo = 2;
  string code = 3;
  string businessId = 4;
  string couponIssueId = 5;
  bool redeemedBySelfActivation = 6;
  int32 purchasePrice = 7;
  string purchaseCurrency = 8;
  string userId = 9;
  string status = 10;
  Timestamp expireAt = 11;
  Timestamp createdAt = 12;
  Timestamp purchasedAt = 13;
}

message CouponIssueWithBusiness {
  string couponIssueId = 1;
  string businessId = 2;
  string couponName = 3;
  string businessName = 4;
  string status = 5;
  string logo = 6;
  repeated string categories = 7;
  string endsAt = 8;
  int32 amountLeft = 9;
  string type = 10;
  int32 priceAmount = 11;
  string currency = 12;
  string drawId = 13;
  int32 sellPriceAmount = 14;
  repeated string restrictedBranchIds = 15;
  repeated string drawNumbers = 16;
  string descriptionFile = 17;
  int32 purchasePriceAmount = 18;
  int32 arrangement = 19;
  int32 streamtype = 20;
}


message RedemptionInfo {
  string redeemedByBusinessManagerId = 1;
  string methodOfRedemption = 2;
}

message Timestamp {
  int64 seconds = 1;
  int32 nanos = 2;
}


message Balance{
  int64 USD = 1;
  int64 EGP = 2;
  int32 type = 3;

}